# pm3d

./: .gitattributes  .gitignore  .ignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  cliff.toml
.github/: FUNDING.yml  bors.toml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
scripts/: install.sh  release.sh  uninstall.sh
src/xcore/: core.rs
