[package]
name = "pm3d"
version = "0.0.0"
description = "3D Printing Project Management"
authors = ["xTekC"]
repository = "https://github.com/xTekC/pm3d"
readme = "README.md"
homepage = "https://github.com/xTekC/pm3d"
documentation = "https://github.com/xTekC/pm3d/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "pm3d -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "pm3d"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
serde = "1.0.197"
surrealdb = "1.1.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

# [dependencies.cursive]
# version = "0.20.0"
# default-features = false
# features = ["crossterm-backend"]

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
